--- a/results.html
+++ b/results.html
@@ -40,7 +40,7 @@
     <tr>
       <th>6</th>
       <td>Apple iPhone 14 128GB Midnight</td>
-      <td>845.00</td>
+      <td>843.08</td>
     </tr>
     <tr>
       <th>7</th>
@@ -99,153 +99,153 @@
     </tr>
     <tr>
       <th>18</th>
+      <td>Apple iPhone 14 Pro Max 256GB Space Black</td>
+      <td>1929.00</td>
+    </tr>
+    <tr>
+      <th>19</th>
       <td>Apple iPhone 14 Pro 512GB Deep Purple</td>
       <td>1667.43</td>
     </tr>
     <tr>
-      <th>19</th>
+      <th>20</th>
       <td>Apple iPhone 13 256GB Green</td>
       <td>1094.37</td>
     </tr>
     <tr>
-      <th>20</th>
+      <th>21</th>
       <td>Apple iPhone 12 256GB White</td>
       <td>1039.00</td>
     </tr>
     <tr>
-      <th>21</th>
+      <th>22</th>
       <td>Apple iPhone 14 128GB RED</td>
       <td>972.05</td>
     </tr>
     <tr>
-      <th>22</th>
+      <th>23</th>
       <td>Apple iPhone 12 128GB Blue</td>
       <td>759.00</td>
     </tr>
     <tr>
-      <th>23</th>
+      <th>24</th>
       <td>Apple iPhone 14 Pro Max 512GB Deep Purple</td>
       <td>2173.89</td>
     </tr>
     <tr>
-      <th>24</th>
+      <th>25</th>
       <td>Apple iPhone 13 mini, žalias, 4GB/256GB</td>
       <td>1109.00</td>
     </tr>
     <tr>
-      <th>25</th>
+      <th>26</th>
       <td>Apple iPhone 14, violetinis, 6GB/128GB</td>
       <td>939.00</td>
     </tr>
     <tr>
-      <th>26</th>
+      <th>27</th>
+      <td>Apple iPhone 14 Pro Max 128GB Deep Purple</td>
+      <td>1204.25</td>
+    </tr>
+    <tr>
+      <th>28</th>
       <td>Apple iPhone 14 Plus 256GB Midnight</td>
       <td>1245.03</td>
     </tr>
     <tr>
-      <th>27</th>
+      <th>29</th>
       <td>Apple iPhone SE 128GB Starlight 3rd gen</td>
-      <td>670.69</td>
+      <td>823.89</td>
     </tr>
     <tr>
-      <th>28</th>
+      <th>30</th>
       <td>Apple iPhone 13 128GB Blue</td>
       <td>748.99</td>
     </tr>
     <tr>
-      <th>29</th>
+      <th>31</th>
       <td>Apple iPhone 13 mini 128GB Starlight</td>
       <td>759.00</td>
     </tr>
     <tr>
-      <th>30</th>
+      <th>32</th>
       <td>Apple iPhone 12 64GB RED</td>
       <td>605.99</td>
     </tr>
     <tr>
-      <th>31</th>
+      <th>33</th>
       <td>Apple iPhone XR, juodas, 3GB/64GB</td>
       <td>554.29</td>
     </tr>
     <tr>
-      <th>32</th>
+      <th>34</th>
       <td>Apple iPhone 14 Pro, violetinis, 6GB/256GB</td>
       <td>1339.00</td>
     </tr>
     <tr>
-      <th>33</th>
-      <td>Apple iPhone 14 Plus 256GB Yellow</td>
-      <td>1647.19</td>
-    </tr>
-    <tr>
-      <th>34</th>
+      <th>35</th>
       <td>Apple iPhone 14 Plus 512GB RED</td>
       <td>1439.00</td>
     </tr>
     <tr>
-      <th>35</th>
+      <th>36</th>
       <td>Apple iPhone 14 Pro Max 128GB Silver</td>
       <td>1706.25</td>
     </tr>
     <tr>
-      <th>36</th>
+      <th>37</th>
       <td>Apple iPhone 14 Pro Max 256GB Deep Purple</td>
       <td>1872.91</td>
     </tr>
     <tr>
-      <th>37</th>
+      <th>38</th>
       <td>Apple iPhone SE 64GB RED 3rd gen</td>
       <td>539.00</td>
     </tr>
     <tr>
-      <th>38</th>
+      <th>39</th>
       <td>Apple iPhone 13, raudonas, 4GB/128GB</td>
       <td>749.00</td>
     </tr>
     <tr>
-      <th>39</th>
+      <th>40</th>
       <td>Apple iPhone 13 512GB Pink</td>
-      <td>1261.30</td>
+      <td>1261.67</td>
     </tr>
     <tr>
-      <th>40</th>
+      <th>41</th>
       <td>Apple iPhone 13, žalias, 4GB/128GB</td>
       <td>749.00</td>
     </tr>
     <tr>
-      <th>41</th>
+      <th>42</th>
       <td>Apple iPhone 14 Plus 256GB Starlight</td>
       <td>1109.00</td>
     </tr>
     <tr>
-      <th>42</th>
+      <th>43</th>
       <td>Apple iPhone 14 Plus 256GB Blue</td>
       <td>1109.00</td>
     </tr>
     <tr>
-      <th>43</th>
+      <th>44</th>
       <td>Apple iPhone 14 Plus 512GB Purple</td>
-      <td>1442.16</td>
+      <td>1394.63</td>
     </tr>
     <tr>
-      <th>44</th>
+      <th>45</th>
       <td>Apple iPhone 14 Plus 256GB Purple</td>
       <td>1109.00</td>
     </tr>
     <tr>
-      <th>45</th>
+      <th>46</th>
       <td>Apple iPhone 14 Pro Max 512GB Silver</td>
       <td>2200.36</td>
     </tr>
     <tr>
-      <th>46</th>
+      <th>47</th>
       <td>Apple iPhone 14 Pro Max 1TB Space Black</td>
       <td>2001.33</td>
-    </tr>
-    <tr>
-      <th>47</th>
-      <td>Apple iPhone 14 Pro Max 1TB Gold</td>
-      <td>2310.17</td>
     </tr>
   </tbody>
 </table>
